--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@
           <div  style="margin-top: 25px;">
             <h2>Javascript</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ea!
+              in the javascript programming language, I am still a beginner and have to learn more
             </p>
           </div>
           <div  style="margin-top: 25px;">
             <h2>Github</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ea!
+              This is my GitHub account, where you can check my coding via the repository
             </p>
           </div>
 
           <div  style="margin-top: 25px;">
-            <h2>Deployment</h2>
+            <h2>Html and CSS</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ea!
+              For HTML and CSS, I know enough to be able to create a website and other stuff
             </p>
           </div>
         </div>
